# bizarre-friends

./: .gitignore  .markdownlint.json  .prettierrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation.yaml  enhancement.yaml  feature_request.yaml  task.yaml
dist-isolation/: index.html  index.js
docs/: classes.md
docs/decisions/: 0001-cross-platform-development-framework.md
docs/design/: ClassDiagram.md  Units.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: enums.rs  lib.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20250310_141559_create_species_table.rs  m20250310_152445_create_subspecies_table.rs  m20250310_153102_create_feeding_schedule_table.rs  m20250310_153152_create_food_table.rs  m20250311_131009_create_unit_tables.rs
src-tauri/src/: lib.rs  main.rs
src/routes/: +layout.svelte  +page.svelte
static/: manifest.json
