[package]
name = "bizarre-friends"
version = "1.0.0-alpha"
description = "A user-friendly, cross-platform tool tailored for breeders of all kinds of animals"
authors = ["JEleniel (https://github.com/JEleniel)"]
edition = "2024"

[lib]
name = "bizarre_friends_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
chrono = { version = "*", features = ["serde"] }
config = { version = "*", features = ["json"] }
dirs = "6.0.0"
entity = { path = "./entity" }
migration = { path = "./migration" }
sea-orm = { version = "1", features = [
	"runtime-tokio-rustls",
	"sqlx-sqlite",
	"debug-print",
	"macros",
	"with-chrono",
	"with-json",
	"with-uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tauri = { version = "2", features = ["isolation"] }
tauri-plugin-opener = { version = "2" }
tokio = { version = "1", features = ["full"] }
