[package]
name = "bizarre-friends"
version = "0.1.0"
description = "A user-friendly, cross-platform tool tailored for breeders of all kinds of animals"
authors = ["Nibbles and Mlems Exotics LLC"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bizarre_friends_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.138"
