[package]
name = "entity"
version = "1.0.0-alpha"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "*", features = ["serde"] }
sea-orm = { version = "1", features = [
	"runtime-tokio-rustls",
	"sqlx-sqlite",
	"debug-print",
	"macros",
	"with-chrono",
	"with-json",
	"with-uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
