[package]
name = "migration"
version = "1.0.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1.1.0", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
