[package]
name = "migration"
version = "1.0.0-alpha"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.44", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
sea-orm-migration = { version = "1.1", features = [
	"runtime-tokio-rustls",
	"sqlx-sqlite",
	"with-chrono",
	"with-json",
	"with-uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
